<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myxmlns="http://schemas.android.com/apk/res/com.jinshangmei.jusfouninquire"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyTheme.Layout.Root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    tools:ignore="ResAuto">

    <com.jusfoun.jusfouninquire.ui.view.BackAndRightImageTitleView
        android:id="@+id/advanced_search_titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

    </com.jusfoun.jusfouninquire.ui.view.BackAndRightImageTitleView>

    <View
        android:id="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/advanced_search_titleview"
        android:background="@color/line_color" />

    <ScrollView
        android:id="@+id/advanced_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/condition_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/advanced_search_titleview"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="24dp"
                android:text="@string/advanced_search_condition_prefix"

                android:textSize="14dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line_color" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/advanced_search_condition_company_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/search_text_hint_color"
                    android:textSize="14dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/product_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search_company_products"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="center_vertical"

                    android:background="@color/white"
                    android:hint="@string/advanced_search_condition_company_products"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/search_text_hint_color"
                    android:textSize="14dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/legal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search_legal_shareholder"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/advanced_search_condition_company_legal"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/search_text_hint_color"
                    android:textSize="14dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/industry_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.jusfoun.jusfouninquire.ui.view.TextChooseView
                    android:id="@+id/industry_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    myxmlns:tagchoosetext="@string/advanced_search_condition_industry_type"></com.jusfoun.jusfouninquire.ui.view.TextChooseView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.jusfoun.jusfouninquire.ui.view.TextChooseView
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    myxmlns:tagchoosetext="@string/advanced_search_condition_area">

                </com.jusfoun.jusfouninquire.ui.view.TextChooseView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/street_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/company_street"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/advanced_search_condition_street"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/search_text_hint_color"
                    android:textSize="14dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/building_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/company_building"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/advanced_search_condition_building"
                    android:maxLength="50"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/search_text_hint_color"

                    android:textSize="14dp"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/fund_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.jusfoun.jusfouninquire.ui.view.TextChooseView
                    android:id="@+id/registered_fund"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    myxmlns:tagchoosetext="@string/advanced_search_condition_registered_fund"

                    >

                </com.jusfoun.jusfouninquire.ui.view.TextChooseView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/line_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="12dp"
                    android:background="@color/line_color" />


            </LinearLayout>


            <com.jusfoun.jusfouninquire.ui.view.TextChooseView
                android:id="@+id/register_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                myxmlns:tagchoosetext="@string/advanced_search_condition_registered_time"

                ></com.jusfoun.jusfouninquire.ui.view.TextChooseView>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:background="@color/black"></View>

        <Button
            android:id="@+id/advanced_search_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/advanced_search_background"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/industry_search"
            android:textColor="@color/search_table_background"
            android:textSize="16dp" />
    </FrameLayout>

    <com.jusfoun.jusfouninquire.ui.view.NetWorkErrorView
        android:id="@+id/net_work_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/advanced_search_titleview"
        android:visibility="gone" />

</RelativeLayout>