<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jusfoun.jusfouninquire.ui.view.XListView
        android:id="@+id/my_focuses_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

    </com.jusfoun.jusfouninquire.ui.view.XListView>

    <LinearLayout
        android:id="@+id/unlogin_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/un_login"
            android:layout_gravity="center"
            android:paddingTop="35dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:text="@string/unlogin_status"
            android:textSize="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:gravity="center"
            android:text="@string/unlogin_tip"
            android:textSize="14dp"
            />

        <TextView
            android:id="@+id/my_focus_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:textColor="@color/search_table_background"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="登录"
            android:textSize="16dp"
            android:background="@drawable/advanced_search_background"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_focuses_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@mipmap/no_focus"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:text="还没有关注任何公司"
            android:textSize="16dp"
            android:paddingTop="20dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_focus_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:gravity="center"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/no_focus_text"
            android:textColor="#666666"
            />

    </LinearLayout>

    <com.jusfoun.jusfouninquire.ui.view.NetWorkErrorView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/net_work_error"
        android:visibility="gone"
        />

    <RelativeLayout
        android:id="@+id/image_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/image_frame"
            android:layout_width="@dimen/loading_width"
            android:layout_height="@dimen/loading_height"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_frame"
            android:text="@string/load_data_warn_str"
            android:gravity="center"
            android:visibility="gone"
            android:padding="10dp"
            />
    </RelativeLayout>


</RelativeLayout>