<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/type_search_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/type_search_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/industry_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/industry_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_selector"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/industry"
                android:textColor="@drawable/search_table_background"
                android:textSize="16dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/legal_shareholder_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/legal_shareholder_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_selector"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/legal_shareholder"
                android:textColor="@drawable/search_table_background"
                android:textSize="16dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dishonest_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >

            <TextView
                android:id="@+id/dishonest_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_selector"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dishonest"
                android:textColor="@drawable/search_table_background"
                android:textSize="16dp"
                />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider_line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#d9d9d9"
        android:layout_below="@id/type_search_top"
        />
    <com.jusfoun.jusfouninquire.ui.widget.SearchViewPager
        android:id="@+id/type_search_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider_line"
        >
    </com.jusfoun.jusfouninquire.ui.widget.SearchViewPager>

</RelativeLayout>